# 42sh

./: .gitignore  CMakeLists.txt  README  README.md  TODO  double_quote_collapsed.sh  out  project.yml  test?txt  tmp1
doc/: 42sh.1  configDoxygen
src/: execution.c  lexer.c  lexer_func.c  main.c  options.c  options.h  prompt.c  readfile.c  shopt.c
src/ast/: ast_destroy.c  ast_node_ampersand.c  ast_node_case.c  ast_node_fctdec.c  ast_node_for.c  ast_node_if.c  ast_node_logical_and.c  ast_node_logical_or.c  ast_node_not.c  ast_node_pipe.c  ast_node_redirect.c  ast_node_scmd.c  ast_node_semicolon.c  ast_node_while.c  print_ast.c
src/builtins/: alias.c  cd.c  echo.c  exec_builtins.c  exit.c  export.c  history.c  loop_builtins.c  read.c  return.c  shopt.c  shopt_output.c  source.c  unalias.c
src/env/: advanced_prompt.c  alias_lib.c  functions.c  replacement.c  setup.c  var.c
src/execution/: exec_case.c  exec_fctdec.c  exec_logical.c  exec_pipe.c  exec_redirect.c  exec_scmd.c  execution.c  queue.c
src/include/: ast.h  ast_destroy.h  builtins.h  env.h  execution.h  lexer.h  maths.h  options.h  parser.h  pathexp.h  print.h  queue.h  quote_lexer.h  readfile.h  shell.h  shopt.h  stack.h  subshell.h  var.h
src/lexer/: lexer.c  lexer_func.c  lexer_str.c  lexer_word.c
src/maths/: a.out  main.c  maths.c  operator.c  stack.c  stack.h
src/parser/: input.c  misc.c  rule_andor.c  rule_case.c  rule_command.c  rule_compound_list.c  rule_for.c  rule_funcdec.c  rule_if.c  rule_input.c  (+7 more)
test/: test.sh  test_ast.c  test_lexer.c  test_lexer_func.c  test_options.c  test_parser.c
(+281 files in other folders)
